--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>DA Form Grader</title>
     <script src="https://cdn.tailwindcss.com"></script>
     
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#334155">
     
     <script src="https://cdn.jsdelivr.net/npm/pdf-lib/dist/pdf-lib.min.js"></script>
@@ -36,15 +36,15 @@
         -moz-appearance: textfield;
       }
     </style>
-  <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="index.css">
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="index.tsx"></script>
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/sw.js').then(registration => {
+          navigator.serviceWorker.register('sw.js').then(registration => {
             console.log('ServiceWorker registration successful with scope: ', registration.scope);
           }, err => {
             console.log('ServiceWorker registration failed: ', err);
